fixed spacing for mobile

--- a/starwars-style2.css
+++ b/starwars-style2.css
@@ -64,7 +64,7 @@ p {
 .flip-card {
   background-color: transparent;
   width: 32%;
-  height: 600px;
+  height: 20%;
   padding: 2rem;
   margin-bottom: 2rem;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
@@ -115,11 +115,24 @@ h2{
 
 @media (max-width: 600px ) {
  h2{
-   font-size: 0.8rem;
+   font-size: 1rem !important;
  }
 main{
-  grid-gap: 3rem;
+  grid-gap: 2rem;
+  display:flex;
+  flex-direction: column;
 }
+.flip-card {
+  background-color: transparent;
+  width: 100vw;
+  height: 100%;
+  padding: 4rem;
+  margin-bottom: 10%;
+  margin-left: -.5rem;
+  text-align: center;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
  
 }
 
@@ -127,4 +140,5 @@ main{
   h2{
     font-size: 0.9rem;
   }
+
  }
